[project]
name = "onekey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography==42.0.8",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.4",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.30.1",
]
